fix: align subtitles font size to the native

--- a/src/styles/_captions.scss
+++ b/src/styles/_captions.scss
@@ -13,7 +13,7 @@
   }
   &.state-paused video::-webkit-media-text-track-container,
   &.hover video::-webkit-media-text-track-container {
-    max-height: calc(100% - 60px);
+    max-height: calc(100% - 50px);
   }
   &.fullscreen.iOS {
     video::-webkit-media-text-track-container {
@@ -26,14 +26,14 @@
     }
   }
   :global(.playkit-subtitles) {
-    top: 60px;
+    top: 50px;
     transform: translateY(0px);
     transition: ease-in 100ms;
   }
   &:not(.overlay-active) {
     &.state-paused :global(.playkit-subtitles),
     &.hover :global(.playkit-subtitles) {
-      transform: translateY(-60px);
+      transform: translateY(-50px);
     }
     &.fullscreen.iOS {
       :global(.playkit-subtitles) {
